--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~10.0.3",
     "@angular/platform-browser-dynamic": "~10.0.3",
     "@angular/router": "~10.0.3",
+    "@ngx-progressbar/core": "^5.3.2",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
@@ -29,6 +30,7 @@
     "ngx": "^2.4.0",
     "ngx-alerts": "^10.1.2",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-progressbar": "^6.0.3",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
